--- a/index.css
+++ b/index.css
@@ -157,17 +157,19 @@ header main{
   transition: 5s;
   background-position: center;
   background-size: cover;
-  /* position: relative; */
+  position: relative;
   background-repeat: no-repeat;
   min-height: 85vh;
   width: 100%;
   margin-top: 5rem;
-  animation: animate 16s ease-in-out;
+  /* background: linear-gradient(rgba(4,9,30,0.5),rgba(4,9,30,0.5)); */
+  animation: animate 16s ease-in-out; 
   animation-direction: alternate-reverse;
   animation-play-state: running;
   animation-fill-mode: forwards;
   animation-iteration-count: infinite;
-}
+} 
+
 
 header .main-content{
   flex-direction: column;
@@ -177,6 +179,14 @@ header .main-content{
   background-color: transparent;
   font-weight: 900;
   font-size: 20px;
+  width: 100%;
+  height: 100%;
+  background-position: center;
+  background-size: cover;
+}
+
+header .main-content img{
+  object-fit: cover;
 }
 
 header .main-content span{
@@ -411,15 +421,26 @@ header .main-content button:hover a{
   cursor: pointer;
 } */
 
+
+
 /* testimonials ============================ */
 #testimonials{
   display: flex;
-  justify-content: center;
-  align-items: center;
+  /* justify-content: center;
+  align-items: center; */
   gap: 1rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
   flex-direction: column;
   margin-top: 2rem;
-  margin-bottom: 2rem;
+  /* margin-bottom: 2rem; */
+  /* height: 500px; */
+}
+
+#testimonials .theinfo{
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 #testimonials h1{
@@ -432,19 +453,20 @@ header .main-content button:hover a{
   color: rgb(117, 112, 112);
   font-size: 20px;
 }
-
+/* 
 #testimonials .profiles{
   height: 200px;
-  gap: 7rem;
-}
+  gap: 2rem;
+} */
 
 #testimonials .profiles .tab-links{
+  /* width: 100%; */
   height: 200px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   /* align-items: center; */
-  width: fit-content;
+  /* width: fit-content; */
   gap: .5rem;
 }
 #testimonials .profiles .tab-links  img .active-tablink{
@@ -464,7 +486,7 @@ header .main-content button:hover a{
   font-size: 16px;
 }
 
-#testimonials .tab-contents{
+/* #testimonials .tab-contents{
   width: 80%;
   padding: 1rem;
   border-radius: 10px;
@@ -488,20 +510,18 @@ header .main-content button:hover a{
 
 #testimonials .active-tab{
   display: block;
-}
+} */
 
-#testimonials .tab-contents .Cristinaspan{
+/* #testimonials .tab-contents .Cristinaspan{
   content: '';
   height: 30px;
   width: 30px;
   background-color: rgb(50, 171, 133);
-  /* box-shadow: 0px 3px 20px rgba(0, 0, 0, 0.15); */
   position: absolute;
   transform: rotate(45deg);
   margin-left: 4rem;
   margin-top: -1.9rem;
   z-index: -20;
-  /* top: 0; */
 }
 
 #testimonials .tab-contents .Smirnaspan{
@@ -509,7 +529,6 @@ header .main-content button:hover a{
   height: 30px;
   width: 30px;
   background-color: rgb(50, 171, 133);
-  /* box-shadow: 0px 3px 20px rgba(0, 0, 0, 0.15); */
   position: absolute;
   transform: rotate(45deg);
   margin-left: 20rem;
@@ -522,7 +541,6 @@ header .main-content button:hover a{
   height: 30px;
   width: 30px;
   background-color: rgb(50, 171, 133);
-  /* box-shadow: 0px 3px 20px rgba(0, 0, 0, 0.15); */
   position: absolute;
   transform: rotate(45deg);
   margin-left: 36rem;
@@ -535,14 +553,14 @@ header .main-content button:hover a{
   height: 30px;
   width: 30px;
   background-color: rgb(50, 171, 133);
-  /* box-shadow: 0px 3px 20px rgba(0, 0, 0, 0.15); */
   position: absolute;
   transform: rotate(45deg);
   margin-left: 51rem;
   margin-top: -1.9rem;
   z-index: -20;
-}
-#testimonials a{
+} */
+
+#testimonials .click-btn a{
   padding: .5rem 2rem;
   background-color: #209689;
   color: white;
@@ -555,15 +573,16 @@ header .main-content button:hover a{
 
 #contact{
   display: flex;
-  justify-content: center;
+  /* justify-content: center; */
   align-items: center;
   padding: 2rem;
   background-color: rgb(240, 236, 236);
   flex-direction: column;
-  margin-top: 6rem;
+  margin-top: 3rem;
+  /* width: 100%; */
 }
 
-.cont2{
+#contact .cont2{
   gap: 3rem;
 }
 .info{
