--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 
 
-/* @keyframes animate {
+@keyframes animate {
   0%,100%{
      background-image: linear-gradient(rgba(4,9,30,0.5),rgba(4,9,30,0.5)),url(./images/background.jpg);
   }
@@ -16,7 +16,7 @@
   75%{
     background-image: linear-gradient(rgba(4,9,30,0.5),rgba(4,9,30,0.5)),url(./images/background3.jpg);
  }
-} */
+}
 
 *{
    padding: 0;
@@ -164,11 +164,11 @@ header main{
   margin-top: 5rem;
   justify-content: center;
   /* background: linear-gradient(rgba(4,9,30,0.5),rgba(4,9,30,0.5)); */
-  /* animation: animate 16s ease-in-out; 
+  animation: animate 16s ease-in-out; 
   animation-direction: alternate-reverse;
   animation-play-state: running;
   animation-fill-mode: forwards;
-  animation-iteration-count: infinite; */
+  animation-iteration-count: infinite;
 } 
 
 
