--- a/index.css
+++ b/index.css
@@ -685,12 +685,18 @@ form input{
   padding-left: 1rem;
 
 }
-form button{
-  width: 30%;
+form textarea{
+  padding: 1rem 0 0 1rem;
+}
+form #button{
+  /* width: 30%; */
   height: 38px;
   border: 3px solid #209689;
   background-color: transparent;
   border-radius: 5px;
+  padding-left: 0;
+  width: 140px;
+  cursor: pointer;
 }
 form h2{
   color: #209689;
@@ -702,6 +708,6 @@ form h2{
 #contact .cont h1{
   margin-bottom: 2rem;
 }
-form input:nth-child(4){
+/* form input:nth-child(4){
   height: 60px;
-}
+} */
